# 2023WXH-Specy

./: README.md
src/demo/: README.md  env.md
src/specy/: Makefile  README.md
src/specy-engine/: .gitignore  CMakeLists.txt  README.md  SpecyEnginePrerequisites.md  main.cpp
src/specy-engine/binding/: CMakeLists.txt  main.cpp
src/specy-engine/binding/trusted/: BindingEnclave.cpp  BindingEnclave.edl  BindingEnclave.h  TxContext.cpp  TxContext.h
src/specy-engine/binding/trusted/local_attestation/: BindingEnclaveMessageExchange.cpp  BindingEnclaveMessageExchange.h  BindingExportFunction.h
src/specy-engine/binding/trusted/test_utils/: TestUtils.cpp  TestUtils.h
src/specy-engine/binding/untrusted/: BindingUntrust.cpp  BindingUntrust.h
src/specy-engine/cmake/: FindSGX.cmake
src/specy-engine/common/base64/: Transform.cpp  base64.cpp
src/specy-engine/common/crypto/trusted/: CryptoUtils.cpp  CryptoUtils.h
src/specy-engine/common/crypto/untrusted/: CryptoUtilsUntrust.cpp
src/specy-engine/common/local_attestation/trusted/: EnclaveMessageExchange.cpp  LocalAttestation.edl  RequestResponseUtil.cpp  Utility.cpp
src/specy-engine/common/local_attestation/untrusted/: UntrustedEnclaveMessageExchange.cpp  UntrustedEnclaveMessageExchange.h
src/specy-engine/common/registration/trusted/: RegistrationEnclave.edl
src/specy-engine/common/remote_attestation/untrusted/: EnclaveQuote.cpp  IntelIAS.h  ssl_client.h
src/specy-engine/common/utils/trusted/: utils.cpp
src/specy-engine/common/utils/untrusted/: url_decode.cpp  url_decode.h
src/specy-engine/config/: SpecyEngine.yaml
src/specy-engine/dataservice/: Dataservice.cpp  Dataservice.h
src/specy-engine/engine_server/: Config.cpp  Config.h  EngineServer.cpp  EngineServer.h  Init.cpp  Init.h  RegisterServiceImpl.cpp  RegisterServiceImpl.h  RegulatorServiceImpl.cpp  RegulatorServiceImpl.h  SpecyEngine.cpp  SpecyEngine.h
src/specy-engine/include/common/base64/: Transform.h
src/specy-engine/include/common/data_types/: EnclaveId.h
src/specy-engine/include/common/data_types/binding/: ErrorType.h
src/specy-engine/include/common/data_types/data_access/: ErrorType.h
src/specy-engine/include/common/data_types/key_management/: ErrorType.h
src/specy-engine/include/common/data_types/local_attestation/: ErrorType.h
src/specy-engine/include/common/data_types/request_processor/: ErrorType.h
src/specy-engine/include/common/data_types/rule_check/: ErrorType.h
src/specy-engine/include/common/local_attestation/: datatypes.h  dh_session_protocol.h
src/specy-engine/include/common/local_attestation/trusted/: EnclaveMessageExchange.h  RequestResponseUtil.h  Utility.h  error_codes.h
src/specy-engine/include/common/remote_attestation/untrusted/: EnclaveQuote.h  openssl_exception.h
src/specy-engine/include/common/utils/untrusted/: common.h  openssl_exception.h  secret.h  sgx_exception.h
src/specy-engine/include/key_management/: KeyManagementExportFunction.h
src/specy-engine/include/rule/: RuleExportFunction.h
src/specy-engine/key_management/: CMakeLists.txt
src/specy-engine/key_management/test/: App.cpp
src/specy-engine/key_management/test/Enclave2/: Enclave2.cpp  Enclave2.edl
src/specy-engine/key_management/test/Enclave3/: Enclave3.cpp  Enclave3.edl
src/specy-engine/key_management/trusted/: KeyManagementEnclave.cpp  KeyManagementEnclave.edl  KeyManagementEnclave.h  RequestResponse.txt
src/specy-engine/key_management/untrusted/verifier/: CertUtils.cpp  CertUtils.h  KeyStore.cpp  KeyStore.h
src/specy-engine/protos/: BindingQuery.proto  E2EMessage.proto  EntityQuery.proto  Register.proto  Regulator.proto  RuleCheck.proto  Signature.proto  build.sh
src/specy-engine/protos/trusted/binding_enclave/: BindingQuery.pb.cc  BindingQuery.pb.h  Register.pb.cc  Register.pb.h  Regulator.pb.cc  Regulator.pb.h
src/specy-engine/protos/trusted/e2e_message/: E2EMessage.pb.cc  E2EMessage.pb.h  RuleCheck.pb.cc  RuleCheck.pb.h  Signature.pb.cc  Signature.pb.h
src/specy-engine/protos/trusted/rule_enclave/: EntityQuery.pb.cc  EntityQuery.pb.h
src/specy-engine/protos/untrusted/: Register.grpc.pb.cc  Register.grpc.pb.h  Register.pb.cc  Register.pb.h  Regulator.grpc.pb.cc  Regulator.grpc.pb.h  Regulator.pb.cc  Regulator.pb.h
src/specy-engine/rule/: CMakeLists.txt  README.md
src/specy-engine/rule/trusted/: RuleEnclave.config.xml  RuleEnclave.cpp  RuleEnclave.edl  RuleEnclave.h
src/specy-engine/rule/trusted/antlr4_generated/: README.md  RuleLexer.cpp  RuleLexer.h  RuleLexer.interp  RuleLexer.tokens  RuleParser.cpp  RuleParser.h  RuleParser.interp  RuleParserBaseListener.cpp  RuleParserBaseListener.h  RuleParserBaseVisitor.cpp  RuleParserBaseVisitor.h  RuleParserListener.cpp  RuleParserListener.h  RuleParserVisitor.cpp  RuleParserVisitor.h
src/specy-engine/rule/trusted/data_provider/: DataProvider.cpp  DataProvider.h  Query.cpp  Query.h
src/specy-engine/rule/trusted/data_types/: Entity.cpp  Entity.h  EntityRule.h  EntitySet.cpp  EntitySet.h  EntityType.h  Expr.cpp  Expr.h  Instance.cpp  Instance.h  RequestContext.cpp  RequestContext.h
src/specy-engine/rule/trusted/local_attestation/: RuleEnclaveMessageExchange.cpp  RuleEnclaveMessageExchange.h  RuleResponse.cpp  RuleResponse.h
src/specy-engine/rule/trusted/request_handler/: RequestHandler.cpp  RequestHandler.h
src/specy-engine/rule/trusted/rule_processor/: RuleProcessor.cpp  RuleProcessor.h
src/specy-engine/rule/trusted/rule_visitors/: BaseVisitor.cpp  BaseVisitor.h  SemanticModelEngine.cpp  SemanticModelEngine.h  SymbolCollector.cpp  SymbolCollector.h
src/specy-engine/rule/untrusted/: RuleEnclaveUntrusted.cpp  RuleEnclaveUntrusted.h
src/specy-engine/test/: CMakeLists.txt  README.md  register_client.cpp  regulator_client.cpp
src/specy-engine/test/basic_server/: database.h  http_server.cpp  http_server.h
src/specy-engine/test/testcases/: nft_transfer.cpp  nft_transfer.h
src/specy-engine/test/testcases/schema/: nft_schema.h  system_schema.cpp  system_schema.h
src/specy-scheduler/: Makefile  README.md  go.mod  go.sum  main.go  specy-config.yaml
(+454 files in other folders)
